--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -87,5 +87,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation "androidx.room:room-ktx:2.2.5"
+
 
 }
